--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: qwerty
+    volumes:
+      - C:\Users\MuhammadNaimatullahK\Downloads\Projects\docker-testapp\data:/data/db
+
   mongo-express:
     container_name: mongo-express
     image: mongo-express
